package controller;

public interface IEventHandler {

}
