package model;

public class Model implements IModel {
	
	private DishMenu dishMenu;
	
	public Model() {
		this.dishMenu = new DishMenu();
	}
}
