package view;

import controller.IEventShooter;

public class EventShooterEditPart extends EditPart implements IEventShooter {

}
