package view;

public abstract class View implements IView {

}
